# butterfly

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: config.toml  config_templ.toml
src-tauri/migrations/mysql/2024-04-28-140837_state_list/: down.sql  up.sql
src-tauri/migrations/mysql/2024-04-28-140905_tax_details/: down.sql  up.sql
src-tauri/migrations/mysql/2024-04-28-140918_id_sequence/: down.sql  up.sql
src-tauri/migrations/mysql/2024-04-28-140943_vendor_details/: down.sql  up.sql
src-tauri/migrations/mysql/2024-04-28-141002_product_details/: down.sql  up.sql
src-tauri/migrations/mysql/2024-04-28-141014_branch_owner_details/: down.sql  up.sql
src-tauri/migrations/mysql/2024-04-28-141041_invoice_summary/: down.sql  up.sql
src-tauri/migrations/mysql/2024-04-28-141121_invoice_details/: down.sql  up.sql
src-tauri/migrations/mysql/2024-09-28-092829_financial_years/: down.sql  (+1 more)
src-tauri/src/: connection.rs  constants.rs  lib.rs  models.rs  schema.rs
src-tauri/src/commands/: branch_owner_details.rs  common.rs  invoice_summary.rs  mod.rs  product_details.rs  sales_invoice.rs  tax_details.rs  vendor_details.rs
src-tauri/src/db_ops/: branch_owner_details.rs  financial_year.rs  id_sequence.rs  invoice_summary.rs  mod.rs  product_details.rs  sales_invoice.rs  state_list.rs  tax_details.rs  vendor_details.rs
src-tauri/src/migrations/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: mod.rs
(+45 files in other folders)
