[package]
name = "Butterfly"
version = "0.1.0"
description = "Sales application"
authors = ["abhishekvthakur.work@gmail.com"]
license = ""
repository = "https://github.com/thakurabhiv/butterfly"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
toml = "0.5.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0"
diesel = { version = "2.1.0", features = ["mysql", "chrono", "bigdecimal"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.2", features = ["serde"] }
fast_qr = { version = "0.12.0", features = ["image"] }
tauri-plugin-process = "2"
tauri-plugin-log = "2"
directories = "6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
